# rlnc-benchmark

./: Cargo.toml  README.md  kzg-rust.txt  rlnc-benchmark.txt
src/: commitment_utils.rs  lib.rs  main.rs
src/commitments/: bitwise.rs  mod.rs  pedersen.rs  ristretto.rs
src/commitments/blst/: kzg.rs  mod.rs  scalar.rs
src/commitments/ristretto/: discrete_log.rs  mod.rs  pedersen.rs
src/erase_code_methods/: mod.rs  network_coding.rs  reed_solomon.rs
src/networks/: message.rs  mod.rs  node.rs  nodes.rs  storage.rs  virtual_oracle.rs
src/networks/storage/: core.rs  decoder.rs  encoder.rs  mod.rs  recoder.rs  tests.rs
src/rlnc/: decoder.rs  encoder.rs  mod.rs  recoder.rs  storage.rs  tests.rs
src/utils/: blocks.rs  blst.rs  bytes.rs  eds.rs  field.rs  matrix.rs  mod.rs  ristretto.rs  rlnc.rs
