[package]
name = "rlnc_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
reed-solomon-erasure = "6.0"
rand = "0.9"
rayon = "1.8"
curve25519-dalek = "4.0.0"
thiserror = "1.0"
sha2 = "0.10"
sysinfo = "0.30.5"
blst = "0.3"
kzg_rust = { git = "https://github.com/pawanjay176/kzg_rust.git" }
serde_json = "1.0"
hex = "0.4"
