[package]
name = "rlnc_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
reed-solomon-erasure = "6.0"
rand = "0.9"
rayon = "1.8"
curve25519-dalek = "4.0.0"
thiserror = "1.0"
sha2 = "0.10"
sysinfo = "0.30.5"
blst = "0.3"
kzg_rust = { git = "https://github.com/perfogic/kzg-multi-point.git", commit = "b45e7f7" }
serde_json = "1.0"
hex = "0.4"
once_cell = "1.19"
